# ComfyUI-Syntax-Highlighting

./: .gitignore  README.md  __init__.py  pyproject.toml  sn0w.py
.github/workflows/: publish_action.yml
src/: config_reader.py  save_preview_image.py  util.py
web/js/: booruTagApi.js  favorite.js  settings.js  textHighlight.js  util.js
web/js/favorites/: contextMenu.js  manager.js  previewImage.js
web/js/highlighting/: highlighter.js  html.js  tokenizer.js
web/js/settings/: ComfyHelper.js
web/js/textbox/: state.js  styleUtils.js  textareaManager.js  tooltipManager.js
